<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">EasyRoom</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="title_activity_reservation">Confirma tu reserva:</string>
    <string name="time_title">Hora:</string>
    <string name="user_title">Usuario:</string>
    <string name="room_title">Sala:</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="room_not_available">La sala no se encuentra disponible</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="time_title">Hora</string>
    <string name="user_title">Usuario</string>
    <string name="room_title">Sala</string>

    <string name="available_rooms">Disponible de <xliff:g>%s</xliff:g> - <xliff:g>%s</xliff:g></string>
</resources>
