<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.belatrix.easyroom.ui.fragments.BookingFragment">

    <TextView
        android:id="@+id/tv_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_title"
        style="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_time_title"
        style="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="9:00"/>

    <TextView
        android:id="@+id/tv_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_start_date"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="-"/>

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_separator"
        style="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="10:00"/>

    <TextView
        android:id="@+id/tv_user_title"
        android:layout_below="@+id/tv_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_title"
        style="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_room_title"
        android:layout_below="@id/tv_user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_title"
        style="@style/Base.TextAppearance.AppCompat.Large" />
</RelativeLayout>
